Enabling metrics